test/pass/dynaload/no_clash.lily
define ends_with(a: String, b: String) {  }

var s = "".ends_with("")
