test/fail/basic_syntax/interp_plus.lily
#[
SyntaxError: Invalid operation: String + String.
    from interp_plus.lily:11:
]#

class Example {
    var @v = "test"
    define tryit(other: Example) {
        var combine =
            "a" ++ other.v ++ "b" ++
            "c" + @v ++ "d" ++ other.v ++ "e"
    }
}

var a = Example()
a.tryit(a)
